Resolved LowRes blurry image by declaring Canvas.width/height in MoonComponent.jsx vs .css file.

--- a/src/pcomponents2/MoonComponent/MoonComponent.css
+++ b/src/pcomponents2/MoonComponent/MoonComponent.css
@@ -7,11 +7,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+
 }
 .moon-container canvas{
     position: fixed;
-
-    width: 400px;
-    height: 400px;
     /* border: 4px solid orange; */
 }
